Added footer icons

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>DevFolio Bootstrap Portfolio Template - Index</title>
+  <title>Jafar Sarif</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -19,6 +19,7 @@
   <link href="assets/vendor/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -36,7 +37,7 @@
   <!-- ======= Header/ Navbar ======= -->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top">DevFolio</a>
+      <!-- <a class="navbar-brand js-scroll" href="#page-top">DevFolio</a> -->
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
         <span></span>
@@ -153,12 +154,14 @@
                     </p>
                     <p class="lead">
                       I am open for following postions :
-                        <ul class="list-group list-group-flush">
-                          <li class="list-group-item">Software Developement Engineer(SDE)</li>
-                          <li class="list-group-item">Android Developer</li>
-                          <li class="list-group-item">Backend Developer</li>
-                          <li class="list-group-item">Network Engineer</li>
+                        <div class="resume-item">
+                        <ul>
+                          <li><h5> Software Developement Engineer(SDE) </h5> </li>
+                          <li><h5>Android Developer</h5></li>
+                          <li><h5>Backend Developer</h5></li>
+                          <li><h5>Network Engineer</h5></li>
                         </ul>
+                        </div>
                     </p>
                   </div>
                 </div>
@@ -349,18 +352,12 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <div class="copyright-box">
-            <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
-            <div class="credits">
-              <!--
-              All the links in the footer should remain intact.
-              You can delete the links only if you purchased the pro version.
-              Licensing information: https://bootstrapmade.com/license/
-              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
-            -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-            </div>
-          </div>
+          <div class="social-links">
+            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
     </div>
