"Added Github projects"

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/githubwidget/github-widget.css" rel="stylesheet"/>
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -231,6 +232,16 @@
       </div>
     </section><!-- End Resume Section -->
 
+        <!-- ======= Services Section ======= -->
+    <section id="service" class="services-mf pt-5 route">
+      <div class="container">
+        <div class="row">
+
+          <div class="github-widget" data-user="sarifjafar"></div>
+        </div>
+      </div>
+    </section><!-- End Services Section -->
+
     <!-- ======= Blog Section ======= -->
     <section id="blog" class="blog-mf sect-pt4 route">
       <div class="container">
@@ -366,6 +377,7 @@
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/venobox/venobox.min.js"></script>
+  <script src="assets/vendor/githubwidget/github-widget.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
