Fixed project link

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     <h6 class="category">Python, nmap, metasploit, vulscan</h6>
                   </div>
                 </div>
-                <h3 class="card-title"><a href="blog-single.html">PhilosopherStone</a></h3>
+                <h3 class="card-title"><a href="#">PhilosopherStone</a></h3>
                 <p class="card-description">
                   Philosopher Stone is an application written in Python which allows 
                   tools such as nmap, vulscan and metasploit to be automated for 
@@ -363,6 +363,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
@@ -374,7 +375,7 @@
                     <h6 class="category">Python, pyautogui</h6>
                   </div>
                 </div>
-                <h3 class="card-title"><a href="blog-single.html">Automating routine task using Python</a></h3>
+                <h3 class="card-title"><a href="#">Automating routine task using Python</a></h3>
                 <p class="card-description">
                   Automated few GUI task such as opening Email in Browser, 
                   Launching few Application after windows startup using PyAutoGUI by programmatically 
@@ -395,7 +396,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="https://github.com/sarifjafar/flash-card-app-using-Vuejs"><img src="assets/img/post-3.jpg" alt="" class="img-fluid"></a>
+                <a href="#"><img src="assets/img/post-3.jpg" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -403,7 +404,7 @@
                     <h6 class="category">Javascript, Vue.js</h6>
                   </div>
                 </div>
-                <h3 class="card-title"><a href="blog-single.html">Flash Card</a></h3>
+                <h3 class="card-title"><a href="https://github.com/sarifjafar/flash-card-app-using-Vuejs">Flash Card</a></h3>
                 <p class="card-description">
                   Created a flash card application using Vue.js for revision and memorization.
                 </p>
@@ -422,7 +423,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="https://github.com/sarifjafar/InteractiveStoryApp"><img src="assets/img/post-3.jpg" alt="" class="img-fluid"></a>
+                <a href="#"><img src="assets/img/post-3.jpg" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -430,7 +431,7 @@
                     <h6 class="category">Java, Android</h6>
                   </div>
                 </div>
-                <h3 class="card-title"><a href="blog-single.html">Space Game</a></h3>
+                <h3 class="card-title"><a href="https://github.com/sarifjafar/InteractiveStoryApp">Space Game</a></h3>
                 <p class="card-description">
                   Created a simple multi ending story game based on user choices.
                 </p>
@@ -449,7 +450,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="https://github.com/sarifjafar/weatherapp"><img src="assets/img/post-3.jpg" alt="" class="img-fluid"></a>
+                <a href="#"><img src="assets/img/post-3.jpg" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -457,7 +458,7 @@
                     <h6 class="category">Java, Android, dark sky</h6>
                   </div>
                 </div>
-                <h3 class="card-title"><a href="blog-single.html">Weather App</a></h3>
+                <h3 class="card-title"><a href="https://github.com/sarifjafar/weatherapp">Weather App</a></h3>
                 <p class="card-description">
                   Created weather application using java for android platform. 
                   For weather information used dark sky api.
